kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restorelitecontainer
  labels:
    name: restorelitecontainer
