kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restorelitecontainer-service
  namespace: restorelitecontainer
  labels:
    app: restorelitecontainer
spec:
  type: ClusterIP
  selector:
    app: restorelitecontainer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
